--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-Hellow world!
+<html lang="zh-CN">
+<head>
+	<meta charset="UTF-8">
+	<title>clock</title>
+  <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
+	<style>
+        body {
+          color: #000000;
+          background-color: #ffffff;
+          font-family: Arial,sans-serif;
+        }
+
+        .app {
+          position: fixed;
+          width: 100%;
+          height: 100%;
+        }
+
+        .time {
+        	width: 100%;
+        	/* margin: auto; */
+          text-align: center;
+          /* padding-top: 120px; */
+          font-size: 8rem;
+          font-family: 'Oswald', sans-serif;
+          font-weight: 700;
+        }
+
+        .date {
+        	width: 100%;
+        	text-align: center;
+          /* padding-top: 40px; */
+          font-size: 2rem;
+          font-weight: bold;
+        }
+    </style>
+</head>
+  <body>
+	 <div class="app">
+         <a href="clock/clock.html">clock</a>
+    </div>
+    <div>
+        <
+      </div
+    </body>
+  </html>
