--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </style>
 </head>
   <body>
-	 <div class="app">
-         <a href="clock/clock.html">clock</a>
+	 <div class="app"><span>Hello world</span>
+         <a href="clock/clock.html">clock</a></div>
     </div>
     <div>
         <
